Style word titles on word_page.html

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -25,7 +25,7 @@
                 </a>                        
             {% endif %}
             <div class="card-content white-text">
-                <span class="card-title">
+                <span class="word-name card-title">
                     <strong>{{ word.name.capitalize() }}</strong>
                 </span>
 
