--- a/static/css/style.css
+++ b/static/css/style.css
@@ -251,6 +251,9 @@ nav i.material-icons {
     margin-top: 8%;
 }
 
+.word-name {
+    text-decoration: underline;
+}
 .alternative-spellings-container {
     opacity: .7;
 }
@@ -274,7 +277,6 @@ nav i.material-icons {
 }
 
 .word-card-heading {
-    text-decoration: underline;
     font-family: 'Merriweather', serif;
     font-size: 18px;
     margin-bottom: 7px;
