Add functionality so only a logged in user may edit their profile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -301,6 +301,9 @@ nav i.material-icons {
     margin-bottom: 8px;
     color: black;
 }
+.word-user-info p {
+    font-size: 14px;
+}
 
 .word-tags {
     margin-bottom: 0;
