--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 
         </div>
         {% if session.id == user_id_string %}
-        <div class="col s12 m6 user-buttons">
+        <div class="col s12 m6 center user-buttons">
             <a href="{{ url_for('edit_profile', username=user.name) }}" class="btn-large deep-purple lighten-1">Edit Your
                 Profile</a>
         </div>
