--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
         <ul id="loggedIn" class="dropdown-content">
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>  
+            <li><a href="{{ url_for('profile', user_id=session['id']) }}">Profile</a></li>  
             <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
         </ul>
 
@@ -52,7 +52,7 @@
             <li><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
         <ul id="loggedInMobile" class="dropdown-content">
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>  
+            <li><a href="{{ url_for('profile', user_id=session['id']) }}">Profile</a></li>  
             <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
         </ul>
 
