Changed base background colour to a darker green for contrast

--- a/templates/add_tag.html
+++ b/templates/add_tag.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block search %}
-    <div class="row green darken-1">
+    <div class="row dark-green">
         <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <i class="material-icons prefix">search</i>
