--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
         </ul>
 
         <nav>
-            <div class="green darken-1 nav-wrapper">
+            <div class="dark-green nav-wrapper">
                 <a href="{{ url_for('home_page') }}" class="center eagle-lake brand-logo">Yurt Index</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                         class="material-icons nav-icon">menu</i></a>
@@ -144,7 +144,7 @@
         <a class="text-shadow return-home-button" href="{{ url_for('home_page') }}">Return to the Home Page</a>
     </div>
 
-    <footer class="green darken-1 page-footer">
+    <footer class="dark-green page-footer">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
