--- a/templates/profile.html
+++ b/templates/profile.html
@@ -70,7 +70,7 @@
             {% for word in created_words %}
                 <div class="row">
                     <div class="col s9">
-                        <div class="card green darken-1">
+                        <div class="card dark-green">
                             {% if word.rating > 6 %}
                                 <span><i class="right star-word-icon material-icons">star</i></span>
                             {% endif %}
@@ -92,7 +92,7 @@
             {% for word in edited_words %}
                 <div class="row">
                     <div class="col right s9">
-                        <div class="card green darken-1">
+                        <div class="card dark-green">
                             {% if word.rating > 6 %}
                                 <span><i class="right star-word-icon material-icons">star</i></span>
                             {% endif %}
