--- a/templates/display_by_tag.html
+++ b/templates/display_by_tag.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block search %}
-    <div class="row search-div green darken-1">
+    <div class="row search-div dark-green">
         <form action="{{ url_for('search') }}" method="post" class="col offset-m2 offset-l3 s12 m8 l6" id="navSearch">
             <div class="input-field search-container white">
                 <input id="search" type="text" name="search">
@@ -70,7 +70,7 @@
     <div class="row all-words-container">
         {% for word in words %}
             <div class="col s12 m6">
-                <div class="card green darken-1">
+                <div class="card dark-green">
                     {% if word.rating > 6 %}
                         <a class="tooltipped right" data-position="bottom" data-tooltip="This is a featured word.">
                             <span><i class="star-word-icon material-icons">star</i></span>
