--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,6 +242,15 @@ nav i.material-icons {
 
 .card .card-action {
     border-top: 2px solid white;
+    color: #FFC968;
+}
+
+#notUserInstructions {
+    font-family: 'Merriweather', serif;
+}
+
+#notUserInstructions a {
+    color: #9ED7FF;
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
@@ -286,7 +295,7 @@ nav i.material-icons {
     font-size: 18px;
     margin-bottom: 7px;
     letter-spacing: 2px;
-    color: #0000cd;
+    color: #FFC968;
 }
 
 .definitions-list,
@@ -297,19 +306,19 @@ nav i.material-icons {
 
 .word-card-normal-text {
     font-family: 'Hina Mincho';
-    font-size: 18px!important;
+    font-size: 21px!important;
     margin-left: 15px!important;
 }
 
 .word-user-info {
     margin-top: 19px;
     margin-bottom: 8px;
-    color: black;
+    color: #FFC968;
 }
 
 .word-user-info p span a {
     text-decoration: underline;
-    color: yellow;
+    color: #9ED7FF;
 }
 
 .word-user-info p {
