--- a/templates/base.html
+++ b/templates/base.html
@@ -165,7 +165,7 @@
                             My Website <i class="fas fa-briefcase"></i>                            
                         </a></li>
                         <li><a target="_blank" href="https://michaelcwalsh7.github.io/Milestone-Project-2/">
-                            My Previous Project <i class="fas fa-puzzle-piece"></i>                         
+                            My Last Project <i class="fas fa-puzzle-piece"></i>                         
                         </a></li>
                     </ul>
                 </div>
