--- a/static/css/style.css
+++ b/static/css/style.css
@@ -274,18 +274,26 @@ nav i.material-icons {
 .word-name {
     text-decoration: underline;
 }
+
 .alternative-spellings-container {
     opacity: .7;
 }
 
 .add-alt-button {
+    color: black!important;
+    font-family: 'Merriweather';
+    padding-top: 5px;
     opacity: .9;
-    background-color: white;
+    background-color: #43a047;
+    margin: 15px 0 5px 10px;
+    margin-top: 15px;
     margin-bottom: 5px;
-    box-shadow: 0px 0px 0px white;
+    box-shadow: 1px 1px 0px 2px black;
     font-size: 1em;
     line-height: 18px;
     text-transform: none;
+    border: solid #2a652d 1px;
+    font-weight: 500;
 }
 
 .no-delete-button {
@@ -356,9 +364,9 @@ nav i.material-icons {
 }
 
 
-/* form page */
+/* form pages */
 .new-word-input {
-    margin: 0px;
+    margin: 21px 0 0;
 }
 
 .new-word-cancel-submit {
@@ -376,6 +384,13 @@ nav i.material-icons {
     opacity: .5;
 }
 
+.first-tag-select {
+    margin-left: 4px!important;
+}
+
+.form-modal-button {
+    margin-bottom: 75px;
+}
 
 
 /* user profile */
@@ -451,7 +466,7 @@ nav i.material-icons {
 .thick-text {
     opacity: 1;
     font-weight: 900;
-    color: #43a047;
+    color: #2a652d;
 }
 
 .user-description {
