--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <div class="col s12 m6 offset-m4">
-                    <a href="{{ url_for('profile', username=session['user']) }}">
+                    <a href="{{ url_for('profile', user_id=session['id']) }}">
                         <button class="btn-large amber darken-2">Cancel <i class="small material-icons">close</i></button>
                     </a>
                     <button class="btn-large blue" type="submit">Submit <i class="small material-icons">check</i></button>
